<resources>
    <string name="app_name" translatable="false">Open Boarders</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search">Search</string>
    <string name="search_hint">New word</string>
    <string name="delete_description">X</string>
    <string name="startText">It\'s time to learn something new!\n Click the button for searching</string>
    <string name="search_helper_text">*Look up in a dictionary</string>
    <string name="empty" />
    <string name="error_no_internet">No Internet error</string>
    <string name="image_view_translation">Picture</string>
    <string name="menu_history">History</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="widget_text">Hello! Its time to learn English!</string>
    <string name="cards">Memory Cards</string>
    <string name="show_translation">Show Translation</string>
    <string name="do_you_remember_translation">Do you remember this translation?</string>
    <string name="next_card">Next</string>
    <string name="error_no_favourites_words">No favourites words. Add some for learning</string>
    <string name="loading">Loading</string>
    <string name="error_null_data">Error - data is null</string>
    <string name="search_word_onboarding">Search here</string>
    <string name="content_text_onboarding">Use this button for typing a word and find its translation</string>
    <string name="search_the_world_fab">Search the world</string>
    <string name="play_pronounce_word">Play pronounce</string>
</resources>