<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <FrameLayout
        android:id="@+id/successLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainActivityRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_translation_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/searchFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/margin_fab"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_search"
            app:tint="@color/white"
            android:contentDescription="@string/search_the_world_fab" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/loadingFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/errorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_textview_stub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/startImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/start_main_image"
            android:visibility="gone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/startTextViewBeforeSearch"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_small"
            android:paddingStart="@dimen/margin_medium"
            android:paddingEnd="@dimen/margin_medium"
            android:text="@string/startText"
            android:textAlignment="center"
            android:visibility="gone" />

    </LinearLayout>
</FrameLayout>