<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:strokeWidth="1dp"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    app:cardCornerRadius="@dimen/margin_medium"
    app:cardElevation="@dimen/margin_medium"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cardHeader"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_remember_translation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.androidprofessional.utils.EquilateralImageView
            android:id="@+id/cardWordPictureImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_view_translation"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardHeader" />

        <TextView
            android:id="@+id/cardWordTextView"
            style="@style/HeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xxx_large"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardWordPictureImageView"
            tools:text="Word" />

        <TextView
            android:id="@+id/cardTranscriptionTextView"
            style="@style/TranscriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardWordTextView"
            tools:text="Transcription" />

        <TextView
            android:id="@+id/cardDescriptionWordTextView"
            style="@style/BaseTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:visibility="invisible"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showTranslationButton"
            tools:text="Description" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/cardPlaySoundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_audio"
            app:layout_constraintBottom_toBottomOf="@+id/cardTranscriptionTextView"
            app:layout_constraintStart_toEndOf="@+id/cardWordTextView"
            app:layout_constraintTop_toTopOf="@+id/cardTranscriptionTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/showTranslationButton"
            style="@style/OutlineSearchButton"
            android:textColor="@color/color_text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_translation"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardTranscriptionTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextCardButton"
            style="@style/OutlineSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_card"
            app:icon="@drawable/ic_next"
            android:layout_marginEnd="@dimen/margin_medium"
            app:iconGravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardDescriptionWordTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>